[metadata]
name = osom-api
description = osom api
version = attr: osom_api.__version__
author = zer0
author_email = osom8979@gmail.com
maintainer = zer0
maintainer_email = osom8979@gmail.com
url = https://github.com/osom8979/osom-api
project_urls =
    GitHub: issues = https://github.com/osom8979/osom-api/issues
    GitHub: repo = https://github.com/osom8979/osom-api
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
keywords =
classifiers =
    Development Status :: 4 - Beta
    Framework :: AsyncIO
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.11
    Topic :: Software Development
    Topic :: Utilities
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.11
packages = find:
include_package_data = True

[options.packages.find]
exclude =
    tester*

[options.exclude_package_data]
osom_api.assets = .gitignore

[options.entry_points]
console_scripts =
    osom_api = osom_api.entrypoint:main
